[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Dag/Run2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Dag/Run0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Dag/Run3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Dag/Run4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Dag/Jump0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Dag/Run5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Dag/Fall0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Dag/Run1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Dag/Idle0.png" type="Texture" id=9]
[ext_resource path="res://gd/Player.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Dag/Fire1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Dag/Fire0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Dag/Fire2.png" type="Texture" id=13]
[ext_resource path="res://sound/スライムの攻撃.mp3" type="AudioStream" id=14]
[ext_resource path="res://sound/FireShoot.mp3" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), null ],
"loop": true,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 28.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.85, 0.85 )
limit_left = 0
limit_top = -640
limit_right = 2656
limit_bottom = 440
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 31, 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -6.0

[node name="SoundShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -6.0

[connection signal="health_updated" from="." to="." method="_on_Player_health_updated"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
